Changes in version 0.1.2

- sps() now returns an integer vector (when possible), rather than a double.