@@ -3,3 +3,4 @@
 ^LICENSE\.md$
 ^\.github$
 ^cran-comments\.md$
+^README\.Rmd$
