@@ -54,6 +54,19 @@ character(0)
 > levels(sps(1:4, c(1, 2), c(1, 1, 2, 2)))
 [1] "TS" "TA" "TA"
 > 
+> is.integer(sps(1:5, 3))
+[1] TRUE
+> is.integer(sps(1, 0))
+[1] TRUE
+> is.integer(sps(1:4, c(1, 2), c(1, 1, 2, 2)))
+[1] TRUE
+>
+> s <- sample(letters, 100, TRUE)
+> x <- runif(100)
+> res <- s[sps(x, prop_allocation(x, 50, s), s)]
+> all.equal(res, sort(res))
+[1] TRUE
+>
 > proc.time()
    user  system elapsed 
   0.326   0.229   0.354 
